# mentorcruise

./: .gitignore  README.md  Taskfile.yaml  docker-compose.yml  pyiceberg.yaml  pyproject.toml
batch_data_pipeline/: main.py  utils.py
batch_data_pipeline/src/: main.py
schema_registry/src/: utils.py
schemas/: product_sales.py
streaming_data_pipeline/: settings.py  utils.py
streaming_data_pipeline/data_generation/: config.yaml  data_generation.md  model_schema_map.py  settings.py
streaming_data_pipeline/data_generation/schemas/: product_sales.py
streaming_data_pipeline/data_generation/src/: config.yaml  data_generator.py  generate.py  main.py  random_data_generator.py  settings.py  test_avro.py  utils.py
streaming_data_pipeline/data_generation/src/helpers/: file_helpers.py
streaming_data_pipeline/data_generation/src/models/: product_sales.py
streaming_data_pipeline/data_generation/src/serializer/: serializer.py  serializer_factory.py
streaming_data_pipeline/data_generation/src/sink/: file_writer.py  kafka_writer.py  test  writer.py  writer_factory.py
streaming_data_pipeline/data_operations/: main.py
streaming_data_pipeline/data_processing/: app.txt
streaming_data_pipeline/data_processing/schemas/: product_sales.py
streaming_data_pipeline/data_processing/src/: config.yaml  main.py  process.py  setting.py  spark_session.py  utils.py
streaming_data_pipeline/data_processing/src/parser/: parser.py  (+1 more)
streaming_data_pipeline/schemas/: order_date.py  product_sales.py  some
utils/iceberg/: iceberg.py  main.py
utils/schema_registry/src/: utils.py
(+5 files in other folders)
